# MegaJIT-8

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ChipCore.h  ChipEmitter.h  ChipInterpretCore.h  ChipJITCore.h  ChipJITState.cpp  ChipJITState.h  ChipState.cpp  ChipState.h  LICENSE.txt  MegaJIT-8.sln  Quirks.h  README.md  Test.cpp  macros.h  main.cpp
Libs/GLFW/docs/: CMakeLists.txt
Libs/GLFW/src/: CMakeLists.txt
Libs/ImGUI/: CMakeLists.txt
Libs/glad/: CMakeLists.txt  glad.c
Libs/udis86/include/: udis86.h
MegaJIT-8/: ChipCore.cpp  ChipCore.h  ChipEmitter.h  ChipInterpretCore.h  ChipJITCore.h  ChipJITState.cpp  ChipJITState.h  ChipState.cpp  ChipState.h  Main.cpp  MegaJIT-8.filters  MegaJIT-8.vcxproj  MegaJIT-8.vcxproj.filters  Shader.cpp  Test.cpp  resources.h
MegaJIT-8/Libs/glad/: glad.c  glad.h
MegaJIT-8/Libs/nfd/: nfd.hpp  nfd.lib  nfd_d.lib
MegaJIT-8/Libs/udis86/: libudis86.lib  libudis86_d.lib
MegaJIT-8/data/: imgui.ini  keyConfig.ini
src/: CMakeLists.txt  ChipEmitter.h  ChipInterpretCore.h  ChipJITCore.h  ChipJITState.h  ChipState.h  Shader.h  main.cpp  resources.h
src/Libs/GLFW/: CMakeLists.txt
src/Libs/GLFW/old/: glfw3.lib
src/Libs/glad/: glad.h
src/Libs/udis86/: CMakeLists.txt  udis86.c
